--- a/srcs/requirements/frontend/src/components/settings/Settings.css
+++ b/srcs/requirements/frontend/src/components/settings/Settings.css
@@ -171,3 +171,12 @@
 	border: 1px solid cyan;
 	box-shadow: 0 0 30px cyan;
   }
+
+.containerBlockOnglet {
+	width: 100%;
+	height: 30px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
