--- a/srcs/requirements/frontend/src/components/chat/RoomSelect.css
+++ b/srcs/requirements/frontend/src/components/chat/RoomSelect.css
@@ -142,3 +142,13 @@
 	font-size: 18px; font-weight: 600; text-align: center;
     text-shadow: 0 0 20px #fff ;
 }
+
+.directMsgEntry {
+   	align-self: center;
+	font-size: 36px; font-weight: 600; text-align: center;
+    text-shadow: 0 0 20px #fff ;
+	transition: text-shadow 0.5s;
+}
+.directMsgEntry:hover {
+    text-shadow: 0 0 20px #f0f, 0 0 60px #f0f;
+}
