--- a/srcs/requirements/frontend/src/components/home/play/css/Game.css
+++ b/srcs/requirements/frontend/src/components/home/play/css/Game.css
@@ -2,85 +2,114 @@
     color: purple;
   }
 
-.inner {
+  .inner {
     display: flex;
     flex-direction: row;
     justify-content: center;
   }
 
-.outer {
+  .outer {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 9em;
-    margin-right: 35em;
-    padding: 10px;
-}
+    text-align: center;
+  }
 
-.dividerStyle {
-    margin-left: 50px;
-    font-size: 50px;
+  .scoresContainer {
+    display: flex;
+    width: 100%;
+    margin-top: 1vh;
+    justify-content: space-around;
+    align-items: stretch;
+    position: absolute;
+    top: 5%;
+    transform: translateY(-50%);
+  }
+
+  .dividerContainer {
+    display: flex;
+    width: 73%;
+    height: 78%;
+    justify-content: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    z-index: 1;
+  }
+
+  .dividerStyle {
+    background: white;
+    width: 1px; /* Add this line */
+    height: 100%;
+  }
+
+  .score {
+    font-size: 2vh;
     color: white;
-}
+    z-index: 1;
+  }
 
-.score {
-    margin-left: 100px;
-    font-size: 50px;
-    color: white;
-}
-
-.style {
-    width: 250px;
-    height: 250px;
+  .style {
+    width: 73%;
+    height: 78%;
     display: grid;
-    grid-template: repeat(10, 1fr) / repeat(20, 1fr);
+    grid-template: repeat(20, 1fr) / repeat(40, 1fr);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    position: relative; /* Add this line */
+
+}
+ .boardContainer {
+    width: 60vw;
+    height: 30vh;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
 }
 
-.containerGameOver
-{
-    min-width: 460px;
-    min-height: 250px;
+  .containerGameOver {
+    min-width: 20vw;
+    min-height: 10vh;
     background-color: rgba(0, 0, 0, 0.8);
     height: 27vh;
     width: 35%;
-    border: 3px solid rgba(255, 255, 255, 0.5);
-    border-radius: 10px;
+    border: 0.2vh solid rgba(255, 255, 255, 0.5);
+    border-radius: 1vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap:10%;
-    /* animation: slideInRight 0.5s forwards; */
-}
+    gap: 1vh;
+  }
 
-
-.gameoverText
-{
-    color:white;
-    font-size: calc(30px + 7vh);
+  .gameoverText {
+    color: white;
+    font-size: calc(15px + 5vh);
     font-weight: 700;
-    text-shadow:
-    0 0 10px #fff,
-    0 0 42px white;
+    text-shadow: 0 0 0.5vh #fff, 0 0 2vh white;
     transition: text-shadow 0.3s ease;
     cursor: pointer;
-    margin-bottom: 0%;
-    margin-top: 4%;
-}
+    margin-bottom: 0;
+    margin-top: 2vh;
+  }
 
-.tryagainButton
-{
-    min-height: 40px;
-    min-width: 65px;
+  .tryagainButton {
+    min-height: 3vh;
+    min-width: 5vh;
     background-image: url(../../../../img/play/play.png);
-    padding-bottom: 10%;
+    padding-bottom: 1vh;
     background-size: contain;
     background-repeat: no-repeat;
     height: 7vh;
     width: 7vh;
-    filter: drop-shadow(0px 0px 5px white);
+    filter: drop-shadow(0 0 0.5vh white);
     transition: box-shadow 0.3s ease;
-}
+  }
